<resources>
    <string name="string_Version">Version alpha-0.9.1</string>
    <string name="app_name">CAH - Game</string>
    <string name="gameName">Cards Against Humankind</string>
    <string name="selectCardHint">Select the card your want to play.</string>
    <string name="close">Close</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="delete">Delete</string>
    <string name="hint_Username">Enter username</string>
    <string name="button_createLobby">Create Lobby</string>
    <string name="hint_lobbyname">Enter lobbyname</string>
    <string name="label_handcardcount">Handcard Count:</string>
    <string name="placeholder_number1">5</string>
    <string name="label_PlayerCount">Max. Player count:</string>
    <string name="hint_DeckSelect">Please select a deck</string>
    <string name="button_SelectDeck">Select Deck</string>
    <string name="button_searchLobby">Search for lobby</string>
    <string name="button_exploreDecks">Explore decks</string>
    <string name="title_activity_test">Test</string>
    <string name="select_player_count">Select max. player count</string>
    <string name="select_handcard_count">Select handcard count</string>
    <string name="start_game">Start Game</string>
    <string name="no_password">No password</string>
    <string name="label_settings">Settings</string>
    <string name="label_save">Save</string>
    <string name="waiting_slogan">Waiting for other players.</string>
    <string name="label_name">Name:</string>
    <string name="label_enter">ENTER</string>
    <string name="label_join">JOIN</string>
    <string name="host">Host:</string>
    <string name="label_ready">Ready</string>
    <string name="label_not_ready">Not ready</string>
    <string name="label_currentLobby">You are currently in lobby:</string>
    <string name="title_leave">Do you really want to leave?</string>
    <string name="message_leave_game">You are currently in a running match!</string>
    <string name="title_quit">Do you really want to quit the game?</string>
    <string name="label_private_lobby">The selected lobby is private. You need to enter the correct password.</string>
    <string name="title_password">Please enter the password</string>
    <string name="hint_password">Enter password..</string>
    <string name="label_private_lobby_wrong">The password you entered was incorrect. Please try again.</string>
    <string name="title_deck_select">Select the deck to play</string>
    <string name="label_deck">Deck:</string>
    <string name="label_hoststartgame">Start game</string>
    <string name="label_nothost">Waiting for host</string>
    <string name="score_board">Score Board</string>
    <string name="play_card">Play a card.</string>
    <string name="waiting_for_others">Waiting for the other players to choose a card.</string>
    <string name="choose_winning_card">Choose the winning card.</string>
    <string name="wait_for_winning_card">Waiting for cardszar to choose the winning card.</string>
    <string name="impossibleError">Something went terribly wrong…</string>
    <string name="getGameFailure">Failed to get game.</string>
    <string name="getBlackCardFailure">Failed to get blackCard.</string>
    <string name="leftLobby">You left the lobby.</string>
    <string name="cantFindLobby">Your lobby couldn\'t be found.</string>
    <string name="lobbyId">lobbyId</string>
    <string name="cantGetLobbies">Failed to get lobbies from server.</string>
    <string name="lobbyNameExists">A lobby with this name already exists</string>
    <string name="missingLobbyname">Please enter a lobbyname to proceed.</string>
    <string name="label_nolobbies">There are currently no available lobbies.</string>
    <string name="label_select_deck">Select deck</string>
    <string name="label_choose_deck">Choose a deck</string>
    <string name="label_no_deck_selected">No deck selected</string>
    <string name="failedGetLastSwipe">Failed to get lastCardSzarSwipe.</string>
    <string name="label_save_deck">Save deck</string>
    <string name="label_leave_deck_create">Do you want to quit deck create?</string>
    <string name="label_hint_leave_deck_create">You will lose your custom deck.</string>
    <string name="waiting_screen_text">Waiting for other players…</string>
    <string name="title_cardcolor">What type of card you want to create?</string>
    <string name="label_cardcolor">Select if you want to create a black or a white card.</string>
    <string name="title_savedeck">Do you have finished your deck?</string>
    <string name="label_savedeck">Your deck will have the name: </string>
    <string name="label_choose_action">Choose an action</string>
    <string name="label_enter_deck_name">Enter deck name…</string>
    <string name="notEnoughCards">The selected deck doesn\'t contain enough cards.</string>
    <string name="show_score_board">show score board</string>
    <string name="back">back</string>
    <string name="label_playername">Playername:</string>
    <string name="generate_random_name">generate random name</string>
    <string name="yes">Yes</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="enterCardText">Enter card text…</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="gameDeleted">The game you were playing was deleted.</string>
    <string name="errorLog">ERROR</string>
    <string name="leave">Leave</string>
    <string name="ok">OK</string>
    <string name="godmodeCommand">#godmode#</string>
    <string name="disabledGodmode">Disabled god mode</string>
    <string name="enabledGodmode">Enabled god mode</string>
    <string name="lobbyNotAvailable">The lobby you were trying to reach is not available anymore.</string>
    <string name="failedToGetLobby">Failed to get lobby from server.</string>
    <string name="notEnoughPlayers">There are not enough players to start the game.</string>
    <string name="deletedDeckMessage">You\'ve deleted %s</string>
    <string name="select">Select</string>
    <string name="translationY">translationY</string>
    <string name="translationX">translationX</string>
    <string name="join">Join</string>
    <string name="deletedLobbyMessage">Deleted lobby: %s</string>
    <string name="failedToGetDecks">Failed to get decks from server.</string>
    <string name="failedGettingCards">Failed to get cards from server.</string>
    <string name="remove">Remove</string>
    <string name="playerKicked">You were kicked from the lobby.</string>
    <string name="player_icon">player icon</string>
    <string name="score_icon">score icon</string>
    <string name="test_player_name">Player Ölf</string>
    <string name="score_label">SCORE:</string>
    <string name="player_count_icon">player count icon</string>
    <string name="hand_card_count_icon">hand card count icon</string>
    <string name="password_icon">password icon</string>
    <string name="white_card">white card</string>
    <string name="black_card">black card</string>
    <string name="last_round_czar">CZAR</string>
    <string name="no_played_card">No played card</string>
    <string name="you_are_cardszar">YOU ARE CARDSZAR</string>
    <string name="enter_a_message">Enter a message…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="chat">chat</string>
    <string name="empty_input">You need to enter at least one character.</string>
    <string name="there_are_currently_no_messages_be_the_first_one">There are currently no messages. Be the first one.</string>
    <string name="kick_player_message">You can kick the selected player from your lobby!</string>
</resources>
